@@ -1,4 +1,5 @@
 /* Run-time dynamic linker data structures for loaded ELF shared objects.
+   X86 version.
    Copyright (C) 1995-2018 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
 
@@ -16,18 +17,24 @@
    License along with the GNU C Library; if not, see
    <http://www.gnu.org/licenses/>.  */
 
-#ifndef	_X86_64_LDSODEFS_H
-#define	_X86_64_LDSODEFS_H	1
+#ifndef	_X86_LDSODEFS_H
+#define	_X86_LDSODEFS_H	1
 
 #include <elf.h>
 #include <cpu-features.h>
 
+struct La_i86_regs;
+struct La_i86_retval;
 struct La_x86_64_regs;
 struct La_x86_64_retval;
 struct La_x32_regs;
 struct La_x32_retval;
 
 #define ARCH_PLTENTER_MEMBERS						\
+    Elf32_Addr (*i86_gnu_pltenter) (Elf32_Sym *, unsigned int, uintptr_t *, \
+				    uintptr_t *, struct La_i86_regs *,	\
+				    unsigned int *, const char *name,	\
+				    long int *framesizep);		\
     Elf64_Addr (*x86_64_gnu_pltenter) (Elf64_Sym *, unsigned int,	\
 				       uintptr_t *,			\
 				       uintptr_t *, struct La_x86_64_regs *, \
@@ -39,6 +46,9 @@ struct La_x32_retval;
 				    long int *framesizep)
 
 #define ARCH_PLTEXIT_MEMBERS						\
+    unsigned int (*i86_gnu_pltexit) (Elf32_Sym *, unsigned int, uintptr_t *, \
+				     uintptr_t *, const struct La_i86_regs *, \
+				     struct La_i86_retval *, const char *); \
     unsigned int (*x86_64_gnu_pltexit) (Elf64_Sym *, unsigned int,	\
 					uintptr_t *,			\
 					uintptr_t *,			\
