@@ -1,5 +1,15 @@
 2018-05-14  H.J. Lu  <hongjiu.lu@intel.com>
 
+	* sysdeps/i386/ldsodefs.h: Removed.
+	* sysdeps/x86_64/ldsodefs.h: Moved to ...
+	* sysdeps/x86/ldsodefs.h: This.
+	(La_i86_regs): New.
+	(La_i86_retval): Likewise.
+	(ARCH_PLTENTER_MEMBERS): Add i86_gnu_pltenter.
+	(ARCH_PLTEXIT_MEMBERS): i86_gnu_pltexit.
+
+2018-05-14  H.J. Lu  <hongjiu.lu@intel.com>
+
 	* sysdeps/x86_64/multiarch/strlen-avx2.S (STRLEN): Remove the
 	unnecessary testl.
 
